# hso

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  README.md  drizzle.config.ts  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.base.json  tsconfig.json  tsconfig.node.json
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/web/: next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
docs/: architecture.md  quickstart.md  spec.md
docs/archive/: PRD.md
legacy/python/: README.md
legacy/python/scripts/: agents_smoke.py
legacy/python/tests/: conftest.py  test_config.py
memory_bank/: PRD.md  architecture.md  base_game_contract.md  domain_model.md  implementation_plan.md  progress.md  repository_skeleton.md  tech_stack.md  ui_page_plan.md
src/application/: id.ts  project-converter.ts  research-agent.ts
src/hso/: __init__.py  cli.py  config.py
src/hso/agents/: __init__.py  local.py  runtime.py
src/hso/gateway/: __init__.py  app.py  models.py  runtime.py
src/hso/literature/: aggregator.py  arxiv_provider.py  jcr_filter.py  s2_provider.py
src/hso/llm/: __init__.py  auth_storage.py  client.py  oauth.py
src/hso/manuscript/: __init__.py  assembler.py  bibliography.py  drafter.py  figures.py  loader.py  outline.py  tables.py  template.py
src/hso/memory/: store.py
src/hso/models/: experiment.py  jcr.py  manuscript.py  profile.py
src/main/: db.ts  index.ts  ipc-handlers.ts  seed-templates.ts
src/preload/: index.ts
src/renderer/: index.html
src/shared/: enums.ts  ipc-channels.ts  schema.ts  types.ts
src/worker/: latex-worker.ts
tasks/: lessons.md  todo.md
tests/: id.test.ts
tests/fixtures/: jcr_showjcr_sample.json  timeseries.csv
tests/test_agents/: test_runtime.py
tests/test_gateway/: test_app.py  test_runtime.py
tests/test_literature/: test_aggregator.py  test_s2_provider.py
tests/test_llm/: test_client.py  test_oauth.py
tests/test_manuscript/: test_assembler.py  test_bibliography.py  test_compiler.py  test_drafter.py  test_loader.py  test_tables.py  test_template.py
tests/test_memory/: test_store.py
tests/test_models/: test_manuscript.py  test_paper.py
(+58 files in other folders)
