[project]
name = "hso"
version = "0.2.0"
description = "Local-first research agent gateway with Python runtime and Next.js operator UI."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "kendrick_lamar M3" }]
license = { text = "MIT" }

dependencies = [
    "httpx[socks]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "openai>=1.40",
    "arxiv>=2.1",
    "semanticscholar>=0.8",
    "tenacity>=8.3",
    "diskcache>=5.6",
    "jinja2>=3.1",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "openai-agents>=0.17",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "types-requests",
]

[project.scripts]
hso = "hso.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hso"]

[tool.hatch.build.targets.wheel.force-include]
"src/hso/manuscript/templates" = "hso/manuscript/templates"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RUF"]
# RUF001/002/003: ambiguous Unicode in identifiers / docstrings / comments —
# 此项目允许中文注释，全角标点是预期内容。
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["arxiv.*", "semanticscholar.*", "diskcache.*", "matplotlib.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config --cov=hso --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src/hso"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
